# SimplBot

./: README.md  main.py  mainbank.json  pyproject.toml  shrek.txt  stats.txt
cogs/: choices.py  cmd_help.py  cmds_fun.py  cmds_general.py  cmds_image.py  cmds_misc.py  cmds_owner.py  cmds_stats.py  cmds_text.py  cmds_utility.py  economy  economy.py  generals.py  urban.py
data/: choices.py  mainbank.json  tempJsonFuncs.py
