[tool.poetry]
name = "repl_python3_WhirlwindLostBytecode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.0.1"
pyfiglet = "^0.8.post1"
timestamp = "^0.0.1"
youtube-dl = "2021.6.6"
discord-py-slash-command = "^2.0.1"
"discord.py" = "^1.7.3"
urbandictionary = "^1.1"
jishaku = "^2.0.0"
psutil = "^5.8.0"
pyshorteners = "^1.0.1"
requests = "^2.25.1"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
